--- a/manifest.json
+++ b/manifest.json
@@ -7,11 +7,11 @@
   "author": "Rafael Fidelis <rafa_fidelis@yahoo.com.br>",
   "permissions": [],
   "icons": { 
-    "16": "icon_16.jpg",
-    "46": "icon_46.jpg",
-    "96": "icon_96.jpg",
-    "112": "icon_112.jpg",
-    "128": "icon_128.jpg" 
+    "16": "icons/icon_16.jpg",
+    "46": "icons/icon_46.jpg",
+    "96": "icons/icon_96.jpg",
+    "112": "icons/icon_112.jpg",
+    "128": "icons/icon_128.jpg" 
   },
 
   "content_scripts": [
